--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,6 +1,19 @@
 body 
 {
-    color: rgb(196, 41, 41);
+    color: rgb(1, 0, 0);
     text-align: center;
     font-family: "Times";
+    font-size: 16px;
+}
+#container
+{
+    width: 70%;
+    padding: 1em;
+    text-align: left;
+    border: 1px solid #DDD;
+    margin: 0 auto;
+}
+#container h1
+{
+    font-size: 20px;
 }
