--- a/css/estilos.css
+++ b/css/estilos.css
@@ -2,7 +2,7 @@ body
 {
     color: rgb(1, 0, 0);
     text-align: center;
-    font-family: "Times";
+    font-family: courier;
     font-size: 16px;
 }
 #container
